--- a/newtab.html
+++ b/newtab.html
@@ -46,7 +46,7 @@
 
         #clock {
             position: fixed;
-            top: 23%;
+            top: 18%;
             margin-left: auto;
             margin-right: auto;
             width: 100%;
@@ -65,7 +65,7 @@
         #time {
             font-size: 50px;
             font-weight: inherit;
-            color: #ffffff;
+            color: rgb(250, 250, 250, 0.7);
             animation: twinkling 2s infinite ease-in-out;
             animation-iteration-count: 1;
         }
@@ -116,6 +116,13 @@
         <div class="weather">
 
         </div>
+
+        <span class="setting"></span>
+
+        <div class="setting-container">
+
+        </div>
+
         <div id="clock">
             <h1 id="time">10:40</h1>
         </div>
@@ -130,7 +137,6 @@
                     </div>
 
                 </div>
-                <span class="close"></span>
             </form>
         </div>
         <!-- <div class="search">
