--- a/newtab.html
+++ b/newtab.html
@@ -66,6 +66,9 @@
             font-size: 50px;
             font-weight: inherit;
             color: rgb(250, 250, 250, 0.7);
+        }
+        .twlink {
+            
             animation: twinkling 2s infinite ease-in-out;
             animation-iteration-count: 1;
         }
@@ -111,26 +114,26 @@
     <script src="js/jq-min-1.3.0.js"></script>
 
     <div class="box">
-        <img class="bg" src="https://w.wallhaven.cc/full/96/wallhaven-96gqz8.jpg" alt="">
+        <img class="bg twlink" src="https://w.wallhaven.cc/full/96/wallhaven-96gqz8.jpg" alt="">
 
         <div class="weather">
 
         </div>
 
-        <span class="setting"></span>
+        <span class="setting twlink"></span>
 
         <div class="setting-container">
 
         </div>
 
         <div id="clock">
-            <h1 id="time">10:40</h1>
+            <h1 id="time" class="twlink">开始</h1>
         </div>
 
         <div class="container">
             <form>
                 <div class="search-wrapper">
-                    <div class="input-holder">
+                    <div class="input-holder twlink">
                         <input type="text" class="search-input" placeholder="搜索..." />
                         <span class="search-icon"></span>
 
