--- a/newtab.html
+++ b/newtab.html
@@ -65,10 +65,11 @@
         #time {
             font-size: 50px;
             font-weight: inherit;
-            color: rgb(250, 250, 250, 0.7);
+            color: rgba(250, 250, 250, 0.7);
         }
+
         .twlink {
-            
+
             animation: twinkling 0.5s infinite ease-in-out;
             animation-iteration-count: 1;
         }
@@ -107,51 +108,48 @@
         }
     </style>
     <!-- <script src="http://libs.baidu.com/jqmobi/1.0.0/jq.ui.min.js"></script> -->
-    <link href="css/search.css" type="text/css" rel="stylesheet" />
+    <link href="css/search.css" type="text/css" rel="stylesheet"/>
 </head>
 
 <body>
-    <script src="js/jq-min-1.3.0.js"></script>
+<script src="js/jq-min-1.3.0.js"></script>
 
-    <div class="box">
-        <img class="bg twlink" src="https://w.wallhaven.cc/full/96/wallhaven-96gqz8.jpg" alt="">
+<div class="box">
+    <img class="bg twlink" src="https://w.wallhaven.cc/full/96/wallhaven-96gqz8.jpg" alt="">
 
-        <div class="weather">
-
-        </div>
-
-        <span class="setting twlink"></span>
-
-        <div class="setting-container">
-
-        </div>
-
-        <div id="clock">
-            <h1 id="time" class="twlink">开始</h1>
-        </div>
-
-        <div class="container">
-            <form>
-                <div class="search-wrapper">
-                    <div class="input-holder twlink">
-                        <input type="text" class="search-input" placeholder="搜索..." />
-                        <span class="search-icon"></span>
-
-                    </div>
-
-                </div>
-            </form>
-        </div>
-        <!-- <div class="search">
-            <input type="text" id="searchBar">
-        </div> -->
+    <div class="weather">
 
     </div>
-    <script src="js/time.js"></script>
+
+    <span class="setting twlink"></span>
+
+    <div class="setting-container">
+
+    </div>
+
+    <div id="clock">
+        <h1 id="time" class="twlink">开始</h1>
+    </div>
+
+    <div class="container">
+        <form>
+            <div class="search-wrapper">
+                <div class="input-holder twlink">
+                    <input type="text" class="search-input" placeholder="搜索..."/>
+                    <span class="search-icon"></span>
+
+                </div>
+
+            </div>
+        </form>
+    </div>
+
+</div>
+
+<div class="big-clock" style="display:none"></div>
+<script src="js/time.js"></script>
 
 </body>
-
-
 
 
 </html>
