--- a/newtab.html
+++ b/newtab.html
@@ -123,7 +123,7 @@
 
     <span class="setting twlink"></span>
 
-    <div class="setting-container">
+    <div id="setting-container">
 
     </div>
 
