--- a/newtab.html
+++ b/newtab.html
@@ -22,7 +22,6 @@
         }
 
         .box {
-
             background-color: inherit;
         }
 
@@ -35,12 +34,6 @@
             height: 100%;
             object-fit: cover;
             backface-visibility: hidden;
-
-        }
-
-        .focus {
-            filter: blur(5px);
-            /* transition-delay: 10; */
 
         }
 
@@ -74,29 +67,6 @@
             animation-iteration-count: 1;
         }
 
-        .search {
-            position: fixed;
-            top: 40%;
-            margin-left: auto;
-            margin-right: auto;
-            text-align: center;
-            width: 100%;
-
-        }
-
-        #searchBar {
-            border: 0;
-            box-sizing: border-box;
-            font-size: 15px;
-            font-weight: 400;
-            height: 100%;
-            outline: 0;
-            text-overflow: ellipsis;
-
-            height: 40px;
-            padding: 0 70px 0 20px;
-        }
-
         @keyframes twinkling {
             0% {
                 opacity: 0;
@@ -106,6 +76,7 @@
                 opacity: 1;
             }
         }
+
     </style>
     <!-- <script src="http://libs.baidu.com/jqmobi/1.0.0/jq.ui.min.js"></script> -->
     <link href="css/search.css" type="text/css" rel="stylesheet"/>
@@ -135,7 +106,7 @@
         <form>
             <div class="search-wrapper">
                 <div class="input-holder twlink">
-                    <input type="text" class="search-input" placeholder="搜索..."/>
+                    <input type="text" class="search-input" placeholder="search" onfocus="this.placeholder=''" onblur="this.placeholder='search'"/>
                     <span class="search-icon"></span>
 
                 </div>
