--- a/newtab.html
+++ b/newtab.html
@@ -125,10 +125,38 @@
                 <div class="function-navigation">
 
                     <div class="item-plus" style="float:right">
-                        <svg width="24" height="24" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg"
-                             style="margin-left: auto;margin-right: auto;display: block;margin-top: 33px;fill: white">
-                            <path d="M12 5.625V6.375H6.375V12H5.625V6.375H0V5.625H5.625V0H6.375V5.625H12Z"></path>
-                        </svg>
+                        <div class="plus-container">
+                            <div style="width: auto;height: auto;">
+                                <h2 style="display: inline-block">添加网站</h2>
+                                <span class="close-plus-container">
+                                    <svg
+                                            viewBox="0 0 16 16"
+                                            width="12px"
+                                            height="12px" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M14.1016 1.60156L8.20312 7.5L14.1016 13.3984L13.3984 14.1016L7.5 8.20312L1.60156 14.1016L0.898438 13.3984L6.79688 7.5L0.898438 1.60156L1.60156 0.898438L7.5 6.79688L13.3984 0.898438L14.1016 1.60156Z"></path>
+                                    </svg>
+                                </span>
+                                <div class="form-item">
+                                    <label>名称</label>
+                                    <input class="form-name" type="text">
+                                </div>
+                                <div class="form-item">
+                                    <label>URL</label>
+                                    <input class="form-url" type="text">
+                                </div>
+                                <div class="form-item">
+                                    <button class="form-btn-add">添加</button>
+                                    <button class="form-btn-cancel">取消</button>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="plus-icon" style="height: 100%">
+                            <svg width="24" height="24" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg"
+                                 style="margin-left: auto;margin-right: auto;display: block;margin-top: 33px;fill: white">
+                                <path d="M12 5.625V6.375H6.375V12H5.625V6.375H0V5.625H5.625V0H6.375V5.625H12Z"></path>
+                            </svg>
+                        </div>
 
                     </div>
                 </div>
