add quick start hidpi icon

--- a/newtab.html
+++ b/newtab.html
@@ -112,7 +112,7 @@
         <form id="search-form">
             <div class="search-wrapper">
                 <div class="input-holder twlink">
-                    <input type="text" class="search-input" placeholder="search"/>
+                    <input type="text" class="search-input" placeholder="search" disabled/>
                     <span class="search-icon"></span>
 
                 </div>
