--- a/newtab.html
+++ b/newtab.html
@@ -117,7 +117,13 @@
 
                 </div>
 
-                <div class="search-radius"></div>
+                <div class="search-radius focus-mode">
+                    <div><button class="active"><img src="chrome://favicon/size/24/https://www.baidu.com"/></button></div>
+
+                    <div><button><img src="chrome://favicon/size/24/https://www.google.com"/></button></div>
+
+                    <div><button><img src="chrome://favicon/size/24/https://www.bing.com"/></button></div>
+                </div>
                 <div class="keywords">
                 </div>
             </div>
