--- a/newtab.html
+++ b/newtab.html
@@ -80,10 +80,13 @@
     </style>
     <!-- <script src="http://libs.baidu.com/jqmobi/1.0.0/jq.ui.min.js"></script> -->
     <link href="css/search.css" type="text/css" rel="stylesheet" />
+    <link href="css/silder.css" type="text/css" rel="stylesheet" />
+    <link href="css/bg-img.css" type="text/css" rel="stylesheet" />
 </head>
 
 <body>
     <script src="js/jq-min-1.3.0.js"></script>
+    <script src="js/silder.js"></script>
 
     <div class="box">
 
@@ -98,8 +101,19 @@
             </path>
         </svg>
         <div id="setting-container">
-            <p>灵感</p>
-            <p>集中</p>
+            <span class="close-setting-container">
+                <svg viewBox="0 0 16 16" width="12px" height="12px" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M14.1016 1.60156L8.20312 7.5L14.1016 13.3984L13.3984 14.1016L7.5 8.20312L1.60156 14.1016L0.898438 13.3984L6.79688 7.5L0.898438 1.60156L1.60156 0.898438L7.5 6.79688L13.3984 0.898438L14.1016 1.60156Z">
+                    </path>
+                </svg>
+            </span>
+            <label for="bg-atomization">背景雾化</label>
+            <div class="bg-atomization"></div>
+            <label for="bg-url">壁纸</label>
+            <div>
+                <input id="bg-url-input" type="text">
+            </div>
 
         </div>
 
@@ -186,7 +200,7 @@
     <script src="js/time.js"></script>
     <script src="js/search.js"></script>
     <script src="js/shortCut.js"></script>
-
+    <script src="js/background-img.js"></script>
 </body>
 
 
