--- a/newtab.html
+++ b/newtab.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>index</title>
+    <title>new tab</title>
     <style>
         body {
             font-family: "microsoft yahei light", "microsoft yahei", PingFangSC-Regular, Helvetica, sans-serif, 等线;
