--- a/newtab.html
+++ b/newtab.html
@@ -12,10 +12,9 @@
             background-size: cover;
             max-width: 100%;
             width: 100%;
-            font-family: "microsoft yahei light", "microsoft yahei", Helvetica, sans-serif, 等线;
             cursor: default;
             overflow: hidden;
-            margin: 0px;
+            margin: 0;
             background-repeat: no-repeat;
             background-position: center center;
 
