rm 去除图片 filter blur

--- a/newtab.html
+++ b/newtab.html
@@ -88,7 +88,7 @@
     <script src="js/silder.js"></script>
 
     <div class="box">
-
+        <div id = "bg-blur"></div>
         <div class="weather">
         </div>
 
