--- a/newtab.html
+++ b/newtab.html
@@ -112,7 +112,7 @@
             <div>
                 <input id="bg-url-input" type="text">
             </div>
-
+            <label id="bg-settings">背景偏好</label>
         </div>
 
 
