--- a/newtab.html
+++ b/newtab.html
@@ -142,7 +142,7 @@
                         </div>
 
                         <div><button class="search-web" id="bing"><img
-                                    src="chrome://favicon/size/24/https://www.bing.com" /></button></div>
+                                    src="chrome://favicon/size/24/https://cn.bing.com" /></button></div>
                     </div>
                     <div class="keywords">
                     </div>
